<resources>
    <string name="str_splash_enter">Open seven tone music player</string>
    <string name="app_name">Seven Music</string>
    <string name="str_scan">Scan</string>
    <string name="str_my_msg">My news</string>
    <string name="str_membership_center">Member Center</string>
    <string name="str_mall">Shopping Mall</string>
    <string name="str_listen_songs_online">Listen to songs online</string>
    <string name="str_about">About</string>
    <string name="str_shin_change">Personalized skin resurfacing</string>
    <string name="str_music_recognition">Listening to songs</string>
    <string name="str_timing_stop_play">Stop playing at regular intervals</string>
    <string name="str_music_alarm">Music alarm clock</string>
    <string name="str_driving_mode">Driving mode</string>
    <string name="str_night_mode">Night mode</string>
    <string name="str_day_mode">Day mode</string>
    <string name="str_setting">Settings</string>
    <string name="str_quit">Exits</string>
    <string name="str_timing_stop_play_title">Stop playing at regular intervals</string>
    <string name="str_timing_stop_play_close">Close</string>
    <string name="str_timing_stop_play_close_ten_minute">10 minutes later</string>
    <string name="str_timing_stop_play_close_twenty_minute">20 minutes later</string>
    <string name="str_timing_stop_play_close_thirty_minute">30 minutes later</string>
    <string name="str_timing_stop_play_close_forty_minute">40 minutes later</string>
    <string name="str_timing_stop_play_close_sixty_minute">60 minutes later</string>
    <string name="str_timing_stop_play_close_custom_minute">customize</string>
    <string name="str_play_quality_automatic">automatic</string>
    <string name="str_timing_stop_play_dialog_title">Stop playing at regular intervals</string>
    <string name="str_timing_stop_play_cancel">Timed stop playback has been canceled</string>
    <string name="str_timing_stop_play_tips">The countdown is over and the music has stopped playing.</string>
    <string name="str_timing_stop_play_set_success_1">Successful setup, will be</string>
    <string name="str_timing_stop_play_set_success_2">Closed after minutes</string>
    <string name="str_dialog_btn_cancel">cancel</string>
    <string name="str_dialog_btn_confirm">confirm</string>
    <string name="str_dialog_btn_sure">determine</string>
    <string name="str_dialog_btn_eliminate">Clear</string>
    <string name="str_dialog_btn_clear">Clear</string>
    <string name="str_dialog_btn_continue_scan">Continue to sweep</string>
    <string name="str_dialog_scan_title_tips">Scan result</string>
    <string name="str_dialog_scan_message_result">Scan result</string>
    <string name="str_scan_flash_light_open">打开闪光灯</string>
    <string name="str_scan_flash_light_close">关闭闪光灯</string>
    <string name="str_alarm_tips_dialog_title">Alarm clock</string>
    <string name="str_alarm_default_time">06:15</string>
    <string name="str_alarm_default_song_name">Wrangler city</string>
    <string name="str_alarm_ring">ring</string>
    <string name="str_alarm_repeat">repeat</string>
    <string name="str_alarm_setting_tips">Please set the alarm time</string>
    <string name="str_alarm_reminder_frequency_once">once</string>
    <string name="str_alarm_reminder_frequency_everyday">every day</string>
    <string name="str_alarm_reminder_frequency_monday">Monday</string>
    <string name="str_alarm_reminder_frequency_tuesday">Tuesday</string>
    <string name="str_alarm_reminder_frequency_wednesday">Wednesday</string>
    <string name="str_alarm_reminder_frequency_thursday">Thursday</string>
    <string name="str_alarm_reminder_frequency_friday">Friday</string>
    <string name="str_alarm_reminder_frequency_saturday">on Saturday</string>
    <string name="str_alarm_reminder_frequency_sunday">Sunday</string>
    <string name="str_alarm_reminder_frequency_week_one">1</string>
    <string name="str_alarm_reminder_frequency_week_two">2</string>
    <string name="str_alarm_reminder_frequency_week_three">3</string>
    <string name="str_alarm_reminder_frequency_week_four">4</string>
    <string name="str_alarm_reminder_frequency_week_five">5</string>
    <string name="str_alarm_reminder_frequency_week_six">6</string>
    <string name="str_alarm_reminder_frequency_week_seven">7</string>
    <string name="str_alarm_reminder_frequency_btn_sure">confirm</string>
    <string name="str_alarm_tips_dialog_msg">Set the time is up, play music:</string>
    <string name="str_alarm_setting_toast_msg_1">Alarm clock will be</string>
    <string name="str_alarm_setting_toast_msg_2">remind</string>
    <string name="str_music_recognition_click_recognition">Click to identify music</string>
    <string name="str_music_recognition_surround_song">Listen to the song and recognize the songs played around you</string>
    <string name="str_music_recognition_identifying">Identifying music...</string>
    <string name="str_music_recognition_click_stop">Click to stop recognition</string>
    <string name="str_music_recognition_humming_song">Identify singing songs</string>
    <string name="str_music_recognition_init_error">Parameter initialization error, please check</string>
    <string name="str_music_recognition_network_request_error">Request an error, please see the reason!</string>
    <string name="str_music_recognition_dialog_title">Song recognition result</string>
    <string name="str_setting_network_play_dialog_title">Are you sure you want to turn on the 2G/3G/4G network playback switch?</string>
    <string name="str_setting_network_download_dialog_title">Are you sure you want to turn on the 2G/3G/4G network download switch?</string>
    <string name="str_setting_network_play_download_dialog_msg">Playback on 2G/3G/4G network will consume traffic. Please refer to your phone billing package for setting.</string>
    <string name="str_setting_download_directory_dialog_title">Set the download directory</string>
    <string name="str_setting_download_directory_no_sd_card">No SD card exists</string>
    <string name="str_setting_cache_dialog_custom_cache_title">Custom cache</string>
    <string name="str_setting_cache_dialog_clear_music_cache_msg">Are you sure you want to clear the music cache?</string>
    <string name="str_setting_cache_dialog_clear_picture_lyrice_msg">Are you sure you want to clear the picture and lyrics cache?</string>
    <string name="str_setting_cache_dialog_clear_video_msg">Are you sure you want to clear the video cache?</string>
    <string name="str_setting_cache_no_cache">No cache yet</string>
    <string name="str_play_bar_play_list_dialog_tips">The playlist is empty, please play music first.</string>
    <string name="str_play_bar_play_list_dialog_title">Are you sure you want to clear the playlist?</string>
    <string name="str_play_bar_song_name">Seven Music</string>
    <string name="str_play_bar_song_word">author information</string>
    <string name="my_local_music_text">Local music</string>
    <string name="my_local_singer_text">Singer</string>
    <string name="my_local_album_text">Album</string>
    <string name="my_local_path_text">Folder</string>
    <string name="search_local_music">Search local songs</string>
    <string name="my_local_music_scan_permission">No storage permissions for scanning</string>
    <string name="my_download_music_text">My download</string>
    <string name="my_played_music_text">Recently played</string>
    <string name="my_favourite_music_text">My Favourite</string>
    <string name="my_favourite_music_title">Favorite music</string>
    <string name="my_favourite_music_manager_toast">No songs selected</string>
    <string name="my_favourite_music_manager_edit">haven\'t liked songs yet</string>
    <string name="my_collection_music_text">My collection</string>
    <string name="my_buy_music_text">My MV</string>
    <string name="my_local_music_count">0 songs</string>
    <string name="my_local_mv_count">0 Movies</string>
    <string name="my_search_local_music">Search local music</string>
    <string name="my_download_music_done_bar_title">Downloaded</string>
    <string name="my_downloading_music_done_bar_title">downloading</string>
    <string name="my_download_not_downloading_tips">No songs being downloaded</string>
    <string name="my_download_not_download_tips">No songs have been downloaded.</string>
    <string name="my_download_clear_action">Clear</string>
    <string name="my_recently_zero_played_music_text">最近没有听过音乐\n快去发现页面寻找歌曲吧!</string>
    <string name="my_favourite_no_music">没有喜欢的音乐\n快去发现页面寻找歌曲吧!</string>
    <string name="my_collection_title_song">Songs</string>
    <string name="my_collection_title_singer">Singer</string>
    <string name="my_collection_title_album">Albums</string>
    <string name="my_bought_none_music_text">还没有收藏过MV哦\n快去寻找视频吧!</string>
    <string name="my_collection_text_view">还没有收藏呦\n去发现页面寻找吧!</string>
    <string name="my_song_lists">Create Song list</string>
    <string name="my_song_lists_number">(0)</string>
    <string name="my_song_lists_new_song_list">Create Song list</string>
    <string name="my_song_lists_new">create</string>
    <string name="my_song_lists_new_cancel">Cancel</string>
    <string name="my_song_lists_new_conflict">There is already a heavy name song list</string>
    <string name="my_song_lists_edit">manager</string>
    <string name="my_collection_song_lists_edit">Collection song list</string>
    <string name="my_song_list_none_text_view">还没有歌单\n点击新建歌单</string>
    <string name="my_collection_list_none_text_view">还没有收藏过歌单\n去发现页面收藏歌单吧</string>
    <string name="my_song_list_create_name_list">My song list </string>
    <string name="my_song_list_context_menu_delete">Delete song list</string>
    <string name="my_song_list_context_menu_edit">Edit song list</string>
    <string name="my_song_list_context_menu_add_to_play">Add play</string>
    <string name="my_song_list_no">No song list</string>
    <string name="my_create_dialog_cancel">Cancel</string>
    <string name="my_music_manager_menu_text">Manager</string>
    <string name="my_music_manager_menu_text_select_all">select all</string>
    <string name="my_music_manager_menu_text_cancel">Cancel</string>
    <string name="my_music_manager_menu_text_delete">Delete</string>
    <string name="my_create_dialog_confirm">Create</string>
    <string name="my_song_list_no_music_found">There are no songs in the song list.</string>
    <string name="my_collection_mv_manager">Edit MV</string>
    <string name="my_collection_mv_manager_play">Play MV</string>
    <string name="my_collection_mv_manager_delete">Remove MV</string>
    <string name="my_collection_mv_onlong_click">Click on the video to play, long press the title to edit</string>
    <string name="my_collection_mv_onlong_know">understood</string>
    <string name="my_network_un_avaiable">Network Unavailable</string>
    <string name="my_download_failed">Download failed</string>
    <string name="my_clear_download">Clear download history</string>
    <string name="my_clear_download_record">Clear download history？</string>
    <string name="my_download_record_cleared">Download song has been emptied</string>
    <string name="my_clear_downloading_task">Clear download task</string>
    <string name="my_clear_downloading_now">Empty downloading？</string>
    <string name="my_clear_downloading">Download task has been emptied</string>
    <string name="my_played_record_clear">Clear play history</string>
    <string name="my_played_record_clear_all">Clear all song play records？</string>
    <string name="my_played_record_clear_toast">Clear recent play</string>
    <string name="my_choose_ring">Select music ring tone</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="search_history_text_hint">History record</string>
    <string name="search_top_text_hint">Hot search</string>
</resources>