<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="0dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >

    <!--显示粗灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_title"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_ten_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_ten_minute"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_twenty_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_twenty_minute"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_thirty_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_thirty_minute"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_forty_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_forty_minute"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_sixty_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_sixty_minute"
        android:textSize="16sp" />

    <!--显示细灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line_and_outline_grey"/>

    <TextView
        android:id="@+id/sidebar_tv_timing_stop_play_close_custom_minute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:drawableRight="@null"
        android:text="@string/str_timing_stop_play_close_custom_minute"
        android:textSize="16sp" />

    <!--显示粗灰色分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_and_outline_grey"/>

</LinearLayout>