<?xml version="1.0" encoding="utf-8"?>
<!--侧边栏的内容布局-->
<!-- android:background="@color/color6"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “附近的人”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_scan"
        style="@style/menu_item_style"
        android:layout_marginBottom="2dp">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_scan" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_scan" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “听歌识曲”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_music_recognition"
        style="@style/menu_item_style">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_music_recognition" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_music_recognition" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “定时播放”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_timing_stop_play"
        style="@style/menu_item_style"
        android:orientation="horizontal">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_timing_stop_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="11dp"
            android:text="@string/str_timing_stop_play" />

        <!--用于显示设置的倒计时关闭音乐时间-->
        <TextView
            android:id="@+id/sidebar_tv_timing_stop_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “音乐闹钟”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_music_alarm"
        style="@style/menu_item_style">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_music_alarm" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_music_alarm" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “夜间模式”-->
   <!-- <LinearLayout
        android:id="@+id/sidebar_ll_night_mode"
        style="@style/menu_item_style"
        android:layout_marginTop="2dp">

        <ImageView
            android:id="@+id/sidebar_iv_night_mode"
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_night_mode" />

        <TextView
            android:id="@+id/sidebar_tv_night_mode"
            style="@style/menu_item_text_view_style"
            android:text="@string/str_night_mode" />

    </LinearLayout>-->

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “设置”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_setting"
        style="@style/menu_item_style"
        android:layout_marginTop="2dp">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_setting" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_setting" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “关于”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_about"
        style="@style/menu_item_style"
        android:layout_marginTop="2dp">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_about" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_about" />

    </LinearLayout>

    <!--该线性布局采用自定义样式格式，定义在styles文件中，放置 “退出”-->
    <LinearLayout
        android:id="@+id/sidebar_ll_quit"
        style="@style/menu_item_style"
        android:layout_marginTop="2dp">

        <ImageView
            style="@style/menu_item_image_view_style"
            android:src="@mipmap/sidebar_quit" />

        <TextView
            style="@style/menu_item_text_view_style"
            android:text="@string/str_quit" />

    </LinearLayout>

</LinearLayout>