<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_transparent_black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/sidebar_tv_alarm__drug_cycle_once"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_once"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>
        <!--tv_drugcycle_0-->
        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_everyday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_everyday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarmdrug_cycle_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_monday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarmdrug_cycle_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_tuesday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_wednesday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_thursday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_friday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_saturday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:text="@string/str_alarm_reminder_frequency_sunday"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_and_outline_grey"/>

        <TextView
            android:id="@+id/sidebar_tv_alarm_drug_cycle_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@null"
            android:gravity="center"
            android:text="@string/str_alarm_reminder_frequency_btn_sure"
            android:textColor="@color/black_33"
            android:textSize="20sp" />

        <!--显示灰色分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@color/line_and_outline_grey"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>

</RelativeLayout>