<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/my_music_manager_button_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="9dp">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:background="@drawable/my_select_bottom_backgroung"
            android:id="@+id/my_music_manager_menu_text_select_all"
            android:text="@string/my_music_manager_menu_text_select_all"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="68dp"
            android:layout_height="35dp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:background="@drawable/my_select_bottom_backgroung"
            android:id="@+id/my_music_manager_menu_text_cancel"
            android:text="@string/my_music_manager_menu_text_cancel"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="68dp"
            android:layout_height="35dp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="24sp"
            android:background="@drawable/my_select_bottom_backgroung"
            android:id="@+id/my_music_manager_menu_text_delete"
            android:text="@string/my_music_manager_menu_text_delete"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_width="68dp"
            android:layout_height="35dp">

        </TextView>
    </LinearLayout>


</LinearLayout>